plang/testing/logs/false-incorrect/159/program159.p.p.out
Error at zZ83 uH5df (M) :- (u (Dj) pYTM (zuJBc (rUGS))).:4:17 error: 
zZ83 uH5df (M) :- (u (Dj) pYTM (zuJBc (rUGS))).
                ^
Error at zZ83 uH5df (M) :- (u (Dj) pYTM (zuJBc (rUGS))).:4:45 error: 
zZ83 uH5df (M) :- (u (Dj) pYTM (zuJBc (rUGS))).
                                            ^
Error at ? ((rwl (Zeiw6) xZ (RDd)); a (OVm) V0K f (N2Zi); (rye1J (Nyc) aNzA kJtm)); hh (qs (VQ) (qlvb (xaGi4 wT UgF (sC QF (w13A3) (dH qbf p5Uh xGO9) ZVrCx))) iyy3T) L9UH Zomd (AF9Ux), j2kXj (DY4T) (nu) (rI l); c (xK0) pbB0L; p8, d23TG, lYwk (HSw) (oX4 nSbO tQlv (QpETa) (nc (iocs XqSVe RUyL) G)); mpQnk GTB0 (T); (w), (o ZP fpED), nSGW ZeC2X (d (Gyly) (Db2BJ) kVA (zlK)) ZH (d bZoy (zk8VU (C2G)) MjYr (jzNZG (kd (kv9op Ev DfcT (Ut) (SN)) (aN (t (od (gGMl TFObW (Z))) bUhKC (uW) Hw)) (dT (H) (T) dm CZU) kZwk) (Rn2))).:10:1 error: 
? ((rwl (Zeiw6) xZ (RDd)); a (OVm) V0K f (N2Zi); (rye1J (Nyc) aNzA kJtm)); hh (qs (VQ) (qlvb (xaGi4 wT UgF (sC QF (w13A3) (dH qbf p5Uh xGO9) ZVrCx))) iyy3T) L9UH Zomd (AF9Ux), j2kXj (DY4T) (nu) (rI l); c (xK0) pbB0L; p8, d23TG, lYwk (HSw) (oX4 nSbO tQlv (QpETa) (nc (iocs XqSVe RUyL) G)); mpQnk GTB0 (T); (w), (o ZP fpED), nSGW ZeC2X (d (Gyly) (Db2BJ) kVA (zlK)) ZH (d bZoy (zk8VU (C2G)) MjYr (jzNZG (kd (kv9op Ev DfcT (Ut) (SN)) (aN (t (od (gGMl TFObW (Z))) bUhKC (uW) Hw)) (dT (H) (T) dm CZU) kZwk) (Rn2))).
^